--- a/index.html
+++ b/index.html
@@ -45,24 +45,19 @@
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation Image" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit-brand">
+            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
+        </article>
+        
+        <article class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
+        </article>
+        <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
+            <img src="./assets/images/cost-management.png" alt="Brand Awareness Image"/>
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
+        </article>
     </div>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
