--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
             <img src="./assets/images/brand-awareness.png" />
             <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </article>
+        
         <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Brand Awareness Image"/>
+            <img src="./assets/images/cost-management.png" alt="Brand Awareness Image" />
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </article>
     </div>
-    <div class="footer">
+    
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+        <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
+    </footer>
 </body>
 
 </html>
